# Cmake_make_demo

./: CMakeLists.txt  README.md
include/: dynamci.cpp  dynamic.h
src/: main.cpp
